--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.15.6",
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "react": "^18.2.0",
